--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Run build
         run: yarn build
       
+        # Copiar código para a Digital Ocean
       - name: Copy dist to Digital Ocean
         uses: appleboy/scp-action@master
         with:
@@ -31,12 +32,11 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "."
+          source: ".,!node_modules"
           target: "~/app/chefx-menu-node"
       
-      # Copiar a pasta "dist" para dentro da Digital Ocean
       
-      # Substituir o código existente na pasta "dist" pelo novo código
+      
       # Executar "yarn" na Digital Ocean
       # Restart servidor Node.js
       
