--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,24 @@ jobs:
           source: ".,!node_modules"
           target: "~/app/chefx-menu-node"
       
+        # Executar "yarn" na Digital Ocean
+      - name: Install dependences on Digital Ocean
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          script: | 
+            cd ~/app/chefx-menu-node
+            yarn 
       
-      
-      # Executar "yarn" na Digital Ocean
-      # Restart servidor Node.js
-      
+        # Restart servidor Node.js
+      - name: Restart server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          script: pm2 restart chefxmenu-api
