--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/mime": "^2.0.3",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -32,11 +34,14 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.954.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "mime": "^2.5.2",
     "mongodb": "^3.6.0",
+    "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
