--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@ STORAGE_DRIVER='disk'
 # STORAGE_DRIVER='s3'
 
 # AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
 AWS_BUCKET_REGION=
+AWS_BUCKET_URL=
