--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/mime": "^2.0.3",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
@@ -42,6 +43,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "mime": "^2.5.2",
+    "mime-types": "^2.1.35",
     "mongodb": "^3.6.0",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
