--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.583.0",
     "aws-sdk": "^2.954.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
